# archetypax

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  run_tests.py  run_tests.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  pytest.yml  release.yml  tests.yml
archetypax/: __init__.py  base.py
archetypax/logger/: core.py  messages.py
archetypax/logger/docs/: logging_system.md  refactoring_guide.md
archetypax/logger/examples/: logger_usage.py
archetypax/models/: __init__.py  archetypes.py  base.py  biarchetypes.py  sparse_archetypes.py
archetypax/tools/: __init__.py  evaluation.py  interpret.py  tracker.py  visualization.py
docs/: api.rst  architecture.md  build_docs.py  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  migration_guide.md  usage.rst
docs/reference/: archetypax.models.rst  archetypax.rst  archetypax.tools.rst  index.rst  modules.rst
examples/: 01_archetypal_analysis_tutorial.ipynb  02_archetypal_interpreter_tutorial.ipynb  03_archetype_movement_visualization.ipynb  06_sparse_archetypal_analysis_tutorial.ipynb  README.md  archetypal_analysis_tutorial.ipynb  basic_usage.ipynb  biarchetypal_analysis_tutorial.ipynb  biarchetypes_interpreter_tutorial.ipynb  demonstration_archetypal_analysis.ipynb
tests/: README.md  __init__.py  conftest.py  test_models.py  test_tools.py
