[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archetypax"
version = "0.1.0"
description = "GPU-accelerated Archetypal Analysis implementation using JAX"
readme = "README.md"
authors = [{ name = "mary", email = "mary.lv416e@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "jax>=0.4.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "optax>=0.1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.9.0", "pytest>=7.0.0", "black>=23.0.0"]
examples = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
]

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
exclude = [
    ".git",
    ".eggs",
    ".github",
    ".venv",
    "build",
    "dist",
    "venv",
    "__pycache__",
]
ignore = [
    "D203", # one-blank-line-before-class (conflicts with D211)
    "D212", # multi-line-summary-first-line (conflicts with D213)
    "E501", # line too long (managed by formatter)
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-third-party = ["numpy", "jax", "sklearn", "optax"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "S101"]
"examples/*" = ["D", "E501"]
"docs/*" = ["D", "E402"]
"__init__.py" = ["F401", "F403"]
